some warnings removed changes resulting from evaluation chapter